<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- communs to all languages -->
    <string name="app_name">Nheengaré</string>
    <string name="about_app_name">NHEENGARÉ</string>
    <string name="about_organization_name">Simbiose</string>
    <string name="about_organization_url">http://simbio.se/</string>
    <string name="action_email_address">support@simbio.se</string>
    <string name="empty"></string>

    <!-- change on each language -->
    <string name="about_title">About</string>
    <string name="about_nheengare">Nheengaré is an open source project that aims to create an online dictionary of nheengatu that is easy to use for people.</string>
    <string name="about_by">Powered by</string>
    <string name="action_about">About Nheengaré</string>
    <string name="action_about_condensed">About</string>
    <string name="action_speak">Contact us</string>
    <string name="action_report_error">Report a bad translation</string>
    <string name="action_report_error_condensed">Report translation</string>
    <string name="action_email_with">Send email with:</string>
    <string name="action_email_subject_main">Hi nheengaré people!</string>
    <string name="action_email_content_main">I would say&#8230;</string>
    <string name="action_email_subject_detail">Error in word %s</string>
    <string name="action_email_content_detail">Hello, I found the following error in the word %s, </string>
    <string name="action_share">Share</string>
    <string name="action_share_condensed">Share</string>
    <string name="action_share_with">Share with:</string>
    <string name="action_configure">Configure</string>
    <string name="action_configure_condensed">Config</string>
    <!--
    	amazon 			http://www.amazon.com/gp/mas/dl/android?p=simbio.se.nheengare
    	google play		https://play.google.com/store/apps/details?id=simbio.se.nheengare
    -->
    <string name="action_share_content_main">Nheengaré one dictionary of Nheengatu Free! https://play.google.com/store/apps/details?id=simbio.se.nheengare</string>
    <string name="action_share_content_detail">I learned the meaning of word %s with Nheengaré! https://play.google.com/store/apps/details?id=simbio.se.nheengare</string>
    <string name="search_word">Search word</string>
    <string name="translation">Translation</string>
    <string name="examples_of_use">Examples of use</string>
    <string name="afi">International Phonetic Alphabet</string>
    <string name="empty_list_search">No words found, attempts to change the search filter settings.</string>
    <string name="loading">Loading&#8230;</string>

    <!-- gramatical classes -->
    <string name="grammatical">Grammatical class</string>
    <string name="grammatical_class_article">Article</string>
    <string name="grammatical_class_adjective">Adjective</string>
    <string name="grammatical_class_numeral">Numeral</string>
    <string name="grammatical_class_pronoun">Pronoun</string>
    <string name="grammatical_class_verb">Verb</string>
    <string name="grammatical_class_adverb">Adverb</string>
    <string name="grammatical_class_preposition">Preposition</string>
    <string name="grammatical_class_conjunction">Conjunction</string>
    <string name="grammatical_class_interjection">Interjection</string>
    <string name="grammatical_class_noun">Noun</string>

    <!-- configurations -->
    <string name="config_search_filter">Filter languages ​at search.</string>
    <string name="config_result_filter">Filter languages ​at translation.</string>
    <string name="config_language_nh">Nheengatu</string>
    <string name="config_language_pt">Portuguese</string>
    <string name="config_language_es">Spanish</string>
    <string name="config_language_in">English</string>

    <!-- temporary -->
    <string name="temp_01">we are working to put nheengatu translations from Spanish and English.</string>

</resources>