<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/action_share"
        android:titleCondensed="@string/action_share_condensed"/>
    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about"
        android:titleCondensed="@string/action_about_condensed"/>
    <item
        android:id="@+id/action_speak"
        android:icon="@android:drawable/ic_menu_send"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_speak"/>

</menu>